Foi criada a função de cadastro e login, porém ainda é necessário implementar o gerenciamento de sessão.

--- a/css/admin.css
+++ b/css/admin.css
@@ -101,7 +101,7 @@ table tbody tr td a:hover, .botao-cadastrar:hover, .botao-excluir:hover {
     background: #EBC181;
     color: #333B1E;
     font-weight: 600;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     font-size: 20px;
     border-radius: 10px;
     padding: 10px 10px;
